# RPanel

./: Cargo.toml  README.md  spec.md
.github/workflows/: main.yml
scripts/: build-aarch64-openwrt.sh  install-openwrt.sh  minipanel.service  openwrt-init
src/: api.rs  auth.rs  config.rs  frontend.rs  logger.rs  main.rs  models.rs  monitor.rs  process_mgr.rs  protect.rs
static/: index.html
