[package]
name = "minipanel"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "sync", "time", "io-util"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.4", features = ["fs", "cors", "trace", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-server = { version = "0.6", features = ["tls-rustls"], optional = true }
rustls-pemfile = { version = "2", optional = true }
once_cell = "1"
thiserror = "1"
anyhow = "1"
nix = { version = "0.29", features = ["signal", "process"] }
rand = "0.8"
libc = "0.2"

[features]
default = ["tls"]
tls = ["dep:axum-server", "dep:rustls-pemfile"]

[ target.'cfg(target_os = "linux")'.dependencies ]
procfs = "0.16"

[dev-dependencies]
tokio-test = "0.4"
